--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: calc(100vh - 100px);
     background-color: #6152CD;
 }
 
