--- a/css/style.css
+++ b/css/style.css
@@ -11,23 +11,13 @@
     height: 20px;
     width: 20px;
     margin: 1px;
+    background-color: lightgrey;
 }
 
 .gridLine{
     display: flex;
 }
 
-.grey{
-    background-color: grey;
-}
-
-.white{
-    background-color: white;
-}
-
-.black{
-    background-color: black;
-}
 
 #form{
     background-color: #272BAD;
@@ -51,4 +41,39 @@
     height: 2em;
     border-radius: 10px;
     margin-top: 1em;
+}
+
+.buttons {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+}
+
+.colorButton {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    border: 0;
+    outline: none;
+    margin: .5rem;
+}
+
+.plain {
+    background-color: lightgrey;
+}
+
+.empty {
+    background-color: white;
+}
+
+.light {
+    background-color: yellow;
+}
+
+.highlight {
+    background-color: green;
+}
+
+.black{
+    background-color: black;
 }
